[package]
name = "secret_integers"
version = "0.1.0"
authors = ["Denis Merigoux <denis.merigoux@gmail.com>"]
edition = "2018"
description = "Wrapping around Rust's integers to allow only constant-time operations"
license = "Apache2"

[[example]]
name = "dalek"
crate-type = ["staticlib"]

[[example]]
name = "chacha20"
crate-type = ["staticlib"]
